<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/action_search"
        android:showAsAction="always"
        android:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        yourapp:showAsAction="never" />
    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        yourapp:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/sign_out"
        yourapp:showAsAction="never" />
</menu>