<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.innovation.me2there.activities.MapActivity">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:id="@+id/imputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_height="wrap_content"
            android:id="@+id/location_text"
            android:hint="@string/location_text"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_clear_black_24dp"
            />


        <Button
            android:layout_toRightOf="@+id/location_text"
            android:layout_weight="3"
            android:id="@+id/lookup_location"
            android:layout_width="fill_parent"
            android:text="@string/action_search"
            style="@style/ButtonDefaultStyle" />

    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_below="@+id/imputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="com.google.android.gms.maps.MapFragment" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pick_location"
        android:layout_alignParentBottom="true"
        android:text="@string/activity_location"
        style="@style/ButtonDefaultStyle" />

</RelativeLayout>
